--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,7 +1,7 @@
 # Action Cable uses Redis by default to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:48ae468a917c9fb8ad87450b603a56cc@catfish.redistogo.com:9949/
 
 development:
   adapter: async
